[package]
name = "pub"
version = "0.1.10"
edition = "2021"
description = "publish dir, port, url to the open web"
license = "MIT"
repository = "https://github.com/btwiuse/pub"
include = ["*.rs", "offline/**", "rust-toolchain.toml", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[[bin]]
name = "pub"
path = "main.rs"

[dependencies]

[build-dependencies]
ureq = "2.9"
tar = "0.4"
xz2 = "0.1"

[workspace]
members = [ "./offline" ]
