[package]
name = "pub"
version = "0.1.16"
edition = "2021"
description = "publish anything to the open web"
license = "MIT"
repository = "https://github.com/btwiuse/pub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
path = "lib.rs"
name = "pub"

[[bin]]
name = "pub"
path = "main.rs"

[dependencies]

[build-dependencies]
ureq = "2.9"
tar = "0.4"
xz2 = "0.1"
