[package]
name = "pub"
version = "0.3.3"
edition = "2021"
description = "publish anything to the open web"
license = "MIT"
repository = "https://github.com/btwiuse/pub"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]
path = "lib.rs"
name = "pub"

[[bin]]
name = "pub"
path = "main.rs"

[dependencies]
self_update = { version = "0.39", features = ["compression-flate2", "compression-zip-deflate"] }

[build-dependencies]
ureq = "2.9"
tar = "0.4"
xz2 = "0.1"
